Fixing issue where the grid area would fill only half of the available space on firefox

--- a/code/media/com_files/css/files.css
+++ b/code/media/com_files/css/files.css
@@ -13,6 +13,8 @@
 .-koowa-box { 
 	display: -webkit-box;
 	display: -moz-box;
+	/* Gecko needs this */
+	width: 100%;
 }
 
 .-koowa-box-horizontal 		{ 
